<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:paddingTop="5dp"
    tools:context=".ui.main.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/translate_logo" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:text="@string/from"
                        android:textAllCaps="true"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="20sp" />

                    <org.angmarch.views.NiceSpinner
                        android:id="@+id/spinner_from_language"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="6dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:text="@string/to"
                        android:textAllCaps="true"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="20sp" />

                    <org.angmarch.views.NiceSpinner
                        android:id="@+id/spinner_to_language"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="6dp" />
                </LinearLayout>


                <EditText
                    android:id="@+id/et_text_to_translate"
                    style="@style/EditText_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_text"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="25sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <Button
                        style="@style/Button_style"
                        android:layout_width="155dp"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_translate"
                        android:onClick="btnTranslate"
                        android:text="@string/translate" />

                    <Button
                        style="@style/Button_style"
                        android:layout_width="155dp"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_search"
                        android:onClick="btnDetect"
                        android:text="@string/detect" />

                </LinearLayout>

                <TextView
                    android:id="@+id/tv_translated_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:background="@drawable/edittext_background"
                    android:padding="5dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="25sp"
                    android:visibility="invisible" />

                <TextView
                    android:id="@+id/tv_translated_by"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/translated_by"
                    android:textAlignment="textEnd"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="15sp"
                    android:visibility="invisible" />

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:gravity="center|bottom"
                    android:orientation="horizontal"
                    android:weightSum="2"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                    <Button
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawableStart="@drawable/ic_history"
                        android:onClick="showHistory"
                        android:text="@string/history"
                        android:textColor="@color/colorPrimaryDark" />


                    <Button
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawableStart="@drawable/ic_camera"
                        android:onClick="btnDetectPhoto"
                        android:text="@string/detect_photo"
                        android:textColor="@color/colorPrimaryDark" />
                </LinearLayout>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>



</android.support.constraint.ConstraintLayout>