<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.camera.CameraActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_captured"
                android:gravity="center"
                android:layout_width="280dp"
                android:layout_height="220dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/choose_language"
                android:textAlignment="center"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <org.angmarch.views.NiceSpinner
                android:id="@+id/spinner_detect_language"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp" />
            <Button
                android:onClick="btnPicTranslate"
                style="@style/Button_style"
                android:drawableStart="@drawable/ic_translate"
                android:text="@string/translate"
                android:layout_width="155dp"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_pic_translated_text"
            android:padding="5dp"
            android:visibility="invisible"
            android:layout_marginTop="7dp"
            android:textSize="25sp"
            android:textColor="@color/colorPrimaryDark"
            android:background="@drawable/edittext_background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/tv_translated_by"
            android:visibility="invisible"
            android:text="@string/translated_by"
            android:textSize="15sp"
            android:textColor="@color/colorPrimaryDark"
            android:textAlignment="textEnd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

</ScrollView>